fix footer overflow

--- a/style.css
+++ b/style.css
@@ -53,5 +53,4 @@ aside {
 
 footer {
     clear: both;
-    overflow: auto;
 }                                                       
